test/types/records/ferguson/choose-record/choose-record3.good
choose-record3.chpl:12: In function 'updateAndPrint':
choose-record3.chpl:14: error: illegal lvalue in assignment
choose-record3.chpl:15: error: illegal lvalue in assignment
